finished editing chapter one

--- a/book.bib
+++ b/book.bib
@@ -238,7 +238,7 @@ month = mar
 
 @book{graves_rnn,
   title={Supervised sequence labelling with recurrent neural networks},
-  author={Graves, Alex and others},
+  author={Graves, Alex},
   volume={385},
   year={2012},
   publisher={Springer}
