--- a/02-deep_learning.Rmd
+++ b/02-deep_learning.Rmd
@@ -10,7 +10,7 @@ This can be thought about in the analogy of recognizing a cat. First you see ear
 
 While neural networks' popularity has taken off in recent years they are not a new technique. The neuron or smallest unit of a neural network was first introduced in 1943 (@mcculloch_neuron). It was then another 15 years until the perceptron (now commonly called 'neural network') was introduced (@rosenblatt_perceptron) that tied together groups of neurons to represent more complex relationships. 
 
-Another ten years later, in a textbook (@minsky_perceptrons) it was shown that a simple single layer perceptron was incapable of solving certain classes of problems like the "And Or" (XOR) problem (\@ref(fig:xorproble)). This is due to the seperating hyperplane found by a single layer perceptron being a linear combination of the input values. This forces the classes to themselves be linearly seperable, which the XOR problem is not. The authors argued that the only way for a perceptron to overcome this hurdle would be to be stacked together, which, while appealing, was not possible to be trained effectively at the time. 
+Another ten years later, in a textbook (@minsky_perceptrons) it was shown that a simple single layer perceptron was incapable of solving certain classes of problems like the "And Or" (XOR) problem (\@ref(fig:xorproble)). This is due to the separating hyperplane found by a single layer perceptron being a linear combination of the input values. This forces the classes to themselves be linearly separable, which the XOR problem is not. The authors argued that the only way for a perceptron to overcome this hurdle would be to be stacked together, which, while appealing, was not possible to be trained effectively at the time. 
 
 
 ```{r, echo = FALSE, label="xorproble", out.width= "50%", fig.align = "center", fig.cap = "Example of the XOR problem. Classes encoded by color are not linearly seperable."}
@@ -25,7 +25,7 @@ Interest in the field of deep learning has had a massive resurgence in the secon
 ### Biological Inspirations
 The word 'neural' in the 'neural network' is reference to the fact that these models derive inspiration from how the brain works. With the individual nodes in a hidden 'layer' frequently being called a 'neuron'. While the broad concepts may be similar between the way animal brains and neural networks work, the similarities are minimal. With animal brains relying not only on the connections and firing of the neurons but also the chemical concentrations and interactions of the two not yet fully understood. 
 
-There has however, been some more recent work on trying to more closely mimic the brain structure with architectures such as capsule networks (@capsnet). These networks introduce another level of architectural hierarchy to the neural network system: the capsule which is a collection of neurons within a given layer. These capsules attempt to recognize the existance of features of the input data, while also modeling the feature's transformation and position. This deals with the problem of traditional neural networks failing to recognize when input features are transformed (e.g. an upside down mug is not recognized by the same feature detectors as a right side up mug). Neuroscience experiments have demonstrated that at least part of our visual system does truly perform these hierarchical stacks of features when recognizing objects (@cnn_animals). 
+There has however, been some more recent work on trying to more closely mimic the brain structure with architectures such as capsule networks (@capsnet). These networks introduce another level of architectural hierarchy to the neural network system: the capsule which is a collection of neurons within a given layer. These capsules attempt to recognize the existence of features of the input data, while also modeling the feature's transformation and position. This deals with the problem of traditional neural networks failing to recognize when input features are transformed (e.g. an upside down mug is not recognized by the same feature detectors as a right side up mug). Neuroscience experiments have demonstrated that at least part of our visual system does truly perform these hierarchical stacks of features when recognizing objects (@cnn_animals). 
 
 ### Geometric Interpretation
 Another way of thinking of how neural networks work is as a building up a series of successive transformations of the data-space that attempt to eventually let the data be linearly separable ((\@ref(fig:geometricinterp)). 
@@ -75,7 +75,7 @@ The basic operations that one does on a neural network really fall into two cate
 
 ### Forward Propagation
 
-Let a neural network with $l$ layers and $k$ dimensional input $X$ and $m$ dimensional output $\hat{y}$ attempting to predict the true target $y$. Each layer is composed of $s_i, i \in \{1, 2, ...,l\}$ neurons and has respective non-linear activation function $f_i$. The output of a layer after affine transformation is represented as a vector of length $s_i$: $\underline{a_i}$ and the layer ouput vector post-activation function outputs: $\underline{o_i}$. The weights representing the affine transition from one layer $i$ to layer $j$ are a matrix $W_i$ of of size $s_{i} \times s_j$. Finally the network has a differentiable with respect to $\hat{y}$ loss function: $L(\hat{y}, y)$. In the case of categorical outcomes $\hat{y}$ corresponds to the probability of the class of interest. This is some times refered to as $\hat{p}$, or $\hat{p}_i$ in the multi-class situation, where $i$ corresponds to one of $k$ output classes. For simplicty of notation we will use $\hat{y}$ to represent both the continuous and categorical cases here. 
+Let a neural network with $l$ layers and $k$ dimensional input $X$ and $m$ dimensional output $\hat{y}$ attempting to predict the true target $y$. Each layer is composed of $s_i, i \in \{1, 2, ...,l\}$ neurons and has respective non-linear activation function $f_i$. The output of a layer after affine transformation is represented as a vector of length $s_i$: $\underline{a_i}$ and the layer output vector post-activation function outputs: $\underline{o_i}$. The weights representing the affine transition from one layer $i$ to layer $j$ are a matrix $W_i$ of of size $s_{i} \times s_j$. Finally the network has a differentiable with respect to $\hat{y}$ loss function: $L(\hat{y}, y)$. In the case of categorical outcomes $\hat{y}$ corresponds to the probability of the class of interest. This is some times referred to as $\hat{p}$, or $\hat{p}_i$ in the multi-class situation, where $i$ corresponds to one of $k$ output classes. For simplicity of notation we will use $\hat{y}$ to represent both the continuous and categorical cases here. 
 
 Forward propagation then proceeds as follows. 
 
@@ -134,7 +134,7 @@ To apply this technique to neural networks we need to make sure all components o
 To calculate the gradient of the weights for hidden layer $i$ we can recall that the hidden layers output can be represented as $\textbf{a}_i = f_i(\textbf{W}\cdot\textbf{a}_{(i -1)})$ (we're omitting the bias term here for simplicity). Thus to calculate the gradient's on the weights we can set $\textbf{g}^*_i = \textbf{g}_{i+1} \odot f'(a_{i+1})$ to be the gradient un-activated by our layer's activation function's derivative. Then to find the derivative with respect to each neuron's weights within the layer we multiply this un-activated gradient by the transpose of the layer's output vector: $\textbf{g}_i = \textbf{g}^*_i \textbf{o}_i^t$. 
 
 
-The fact that the calculation of these gradients is so simple is fundamental to deep learning. By ensuring that the flow of error is acyclic and all transforming functions are divisable, a deep neural network can be trained with extremely simple mathematical operations. If it were more complicated, extremely large networks (such as those used in computer vision) with millions of parameters to tune would simply be computationally infeasible to calculate gradients for. Conveniently, the run time of the back propigation is a simple product of the number of neurons in each layer and the number of layers in the whole model. 
+The fact that the calculation of these gradients is so simple is fundamental to deep learning. By ensuring that the flow of error is acyclic and all transforming functions are divisible, a deep neural network can be trained with extremely simple mathematical operations. If it were more complicated, extremely large networks (such as those used in computer vision) with millions of parameters to tune would simply be computationally infeasible to calculate gradients for. Conveniently, the run time of the back propagation is a simple product of the number of neurons in each layer and the number of layers in the whole model. 
 
 #### Other methods
 
@@ -222,7 +222,7 @@ $$P(\mathbb{\theta}, \mathbb{y}|\mathbb{x}) = P_{\text{model}}(\mathbb{y} | \mat
 
 For example, with a continuous outcome model it is commonly assumed that the outcome $y$ corresponding to input $\mathbb{x}$ will be normally distributed. Due to this assumption, the loss function is derived from the likelihood equation of the normal model. 
 
-Optimization then becomes a task of manipulating the parameters of the network $\mathbb{\theta}$ such that the predicted conditional distribution of the output is as close as possible to the observed conditional distribution. The 'distance' from the conditional distribution is a quantity refered to as the Kullback-Leibler divergence. 
+Optimization then becomes a task of manipulating the parameters of the network $\mathbb{\theta}$ such that the predicted conditional distribution of the output is as close as possible to the observed conditional distribution. The 'distance' from the conditional distribution is a quantity referred to as the Kullback-Leibler divergence. 
 
 ```{definition, label = "kld", name="Expected Kulback-Leibler Divergence"}
 $$\text{KLD(model, observed)} = \sum_{i \in \text{observations}}P_{\text{observed}}(\mathbb{y_i} | \mathbb{x_i}) \cdot \log{\frac{P_{\text{observed}}(\mathbb{y_i} | \mathbb{x_i})}{P_{\text{model}}(\mathbb{y_i} | \mathbb{x_i})}}$$
@@ -279,11 +279,11 @@ While it is possible to use other loss functions in neural networks, it is commo
 
 Neural networks have a large number of parameters or weights that need to be tuned in order to minimize their loss. Whenever there are this many knobs to tune a large concern is overfitting to the training data, leaving the model unable to generalize.
 
-Neural networks have many ways of dealing with overfitting, some common to allmost all machine learning methods, and some specific to neural networks. 
+Neural networks have many ways of dealing with overfitting, some common to almost all machine learning methods, and some specific to neural networks. 
 
 ### Parameter penalization
 
-Perhaps the most common way of dealing with overfitting is by penalizing the parameters. In this case the model's loss function adds a term that 'penalizes' large paramters. By doing this the model trys to find a balance between fitting the data well and also keeping its weights small. There are two primary penalization methods, $L1$ penalization, where the sum of the absolute value of the parameters is added to the loss, and $L2$ penalization, where the sum of the squares of the weights are added to the loss. 
+Perhaps the most common way of dealing with overfitting is by penalizing the parameters. In this case the model's loss function adds a term that 'penalizes' large parameters. By doing this the model tries to find a balance between fitting the data well and also keeping its weights small. There are two primary penalization methods, $L1$ penalization, where the sum of the absolute value of the parameters is added to the loss, and $L2$ penalization, where the sum of the squares of the weights are added to the loss. 
 
 ```{definition, label = "l1penalization", name="L1 penalization"}
 For a model with a $k$-dimensional parameter space and a penalization amount, $\lambda$: 
@@ -294,13 +294,13 @@ $$L_{L1}(\theta) = \hat{L}(\theta) + \lambda \sum_{j = 1}^{k}|\theta_j|$$
 $$L_{L2}(\theta) = \hat{L}(\theta) + \lambda \sum_{j = 1}^{k}\theta_j^2$$
 ```
 
-$L1$ penalization tends to shrink parameter weights to zero, where as $L2$ shrinks them assymptotically to zero. 
+$L1$ penalization tends to shrink parameter weights to zero, where as $L2$ shrinks them asymptotically to zero. 
 
-The parameter of $\lambda$ corresponds to the severity of penalization for large weights. It is often tuned by comparing the training loss of the model with the validation or test loss and attempting to find a value of $\lambda$ that shrinks the losses to eachother (but not over as to avoid under-fitting).
+The parameter of $\lambda$ corresponds to the severity of penalization for large weights. It is often tuned by comparing the training loss of the model with the validation or test loss and attempting to find a value of $\lambda$ that shrinks the losses to each other (but not over as to avoid under-fitting).
 
 ### Dropout
 
-Another method of avoiding overfitting that is unique to neural networks is the technique known as dropout (@dropout). While training, the activation amounts of given neurons are randomly set to zero (or dropped) with probability $P_{\text{drop}}$. This prevents the model from overfitting the data by never allowing it to tune weights such that they simply memorize the training data, as if it does its predictions will be very poor when random neurons are dropped. When the model is then used in a testing scenario no neurons are dropped but the weights are scalled back by $1 - P_{\text{drop}}$ to account for the fact that more neurons are contributing to the answer than were when the model was trained.
+Another method of avoiding overfitting that is unique to neural networks is the technique known as dropout (@dropout). While training, the activation amounts of given neurons are randomly set to zero (or dropped) with probability $P_{\text{drop}}$. This prevents the model from overfitting the data by never allowing it to tune weights such that they simply memorize the training data, as if it does its predictions will be very poor when random neurons are dropped. When the model is then used in a testing scenario no neurons are dropped but the weights are scaled back by $1 - P_{\text{drop}}$ to account for the fact that more neurons are contributing to the answer than were when the model was trained.
 
 Dropout has been shown to be a very effective, if counter-intuitive, method for avoiding overfitting and is used extremely commonly. 
 
